<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECECEC"
    android:padding="10dp"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:text="@string/ultimasNoticias"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#990000"
        android:typeface="serif" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:minWidth="200dp" >

        <TextView
            android:id="@+id/NotificationVist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/borderlistview"
            android:minWidth="200dp"
            android:padding="30dp"
            android:text="@string/cargandoDatos"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="@dimen/Quince" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/NotificationVist"
            android:layout_below="@+id/NotificationVist"
            android:minWidth="200dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:background="@drawable/borderlistview"
                android:clickable="true"
                android:gravity="center"
                android:minWidth="100dp"
                android:onClick="borrarNoticia"
                android:padding="10dp"
                android:text="@string/borrar"
                android:textColor="#990000"
                android:typeface="serif" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight=".5"
                android:background="@drawable/borderlistview"
                android:clickable="true"
                android:gravity="center"
                android:minWidth="100dp"
                android:onClick="compartirNoticia"
                android:padding="10dp"
                android:text="@string/compartir"
                android:textColor="#990000"
                android:typeface="serif" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>