<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#ECECEC"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ECECEC"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/Cinco" >

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageVista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/borderlistview" />

            <ProgressBar
                android:id="@+id/progressBar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/txtHermandad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#990000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/RelativeFecha"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top"
            android:layout_marginTop="0dp"
            android:gravity="right"
            android:orientation="vertical"
            android:weightSum="1.0" >

            <TextView
                android:id="@+id/txtFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/Veinte"
                android:layout_marginTop="@dimen/Veinte"
                android:paddingLeft="@dimen/Diez"
                android:text="@string/Fecha"
                android:textColor="#990000"
                android:typeface="sans" />

            <ListView
                android:id="@+id/lstFecha"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/Diez"
                android:layout_marginRight="@dimen/Diez"
                android:layout_weight="0.54"
                android:background="@drawable/borderlistview"
                android:divider="#DFDEDE"
                android:dividerHeight="2sp"
                android:footerDividersEnabled="true"
                android:headerDividersEnabled="true"
                android:scrollbarAlwaysDrawVerticalTrack="false" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/RelativeCiudad"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RelativeFecha"
            android:orientation="vertical"
            android:weightSum="1.0" >

            <TextView
                android:id="@+id/txtCiudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/Veinte"
                android:layout_marginTop="@dimen/Veinte"
                android:paddingLeft="@dimen/Diez"
                android:text="@string/Ciudad"
                android:textColor="#990000"
                android:typeface="sans" />

            <ListView
                android:id="@+id/lstCiudad"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/Diez"
                android:layout_marginRight="@dimen/Diez"
                android:layout_weight="1"
                android:background="@drawable/borderlistview"
                android:divider="#DFDEDE"
                android:dividerHeight="2sp"
                android:footerDividersEnabled="true"
                android:headerDividersEnabled="true"
                android:scrollbarAlwaysDrawVerticalTrack="false" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/RelativeUniforme"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RelativeCiudad"
            android:orientation="vertical"
            android:weightSum="1.0" >

            <TextView
                android:id="@+id/txtUniforme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/Veinte"
                android:layout_marginTop="@dimen/Veinte"
                android:paddingLeft="@dimen/Diez"
                android:text="@string/Uniforme"
                android:textColor="#990000"
                android:typeface="sans" />

            <ListView
                android:id="@+id/lstUniforme"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/Diez"
                android:layout_marginRight="@dimen/Diez"
                android:layout_weight="1"
                android:background="@drawable/borderlistview"
                android:divider="#DFDEDE"
                android:dividerHeight="2sp"
                android:footerDividersEnabled="true"
                android:headerDividersEnabled="true"
                android:scrollbarAlwaysDrawVerticalTrack="false"
                android:scrollbars="none" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/RelativeHorario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RelativeUniforme"
            android:orientation="vertical"
            android:weightSum="1.0" >

            <TextView
                android:id="@+id/txtHorario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/Veinte"
                android:layout_marginTop="@dimen/Veinte"
                android:paddingLeft="@dimen/Diez"
                android:text="@string/Horario"
                android:textColor="#990000"
                android:typeface="sans" />

            <ListView
                android:id="@+id/lstHorario"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/Diez"
                android:layout_marginRight="@dimen/Diez"
                android:layout_weight="1"
                android:background="@drawable/borderlistview"
                android:divider="#DFDEDE"
                android:dividerHeight="2sp"
                android:footerDividersEnabled="true"
                android:headerDividersEnabled="true"
                android:scrollbarAlwaysDrawVerticalTrack="false"
                android:scrollbars="none" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/RelativeQuedadaR"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RelativeHorario"
            android:orientation="vertical"
            android:weightSum="1.0" >

            <TextView
                android:id="@+id/txtQuedadaR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/Veinte"
                android:layout_marginTop="@dimen/Veinte"
                android:paddingLeft="@dimen/Diez"
                android:text="@string/QuedadaR"
                android:textColor="#990000"
                android:typeface="sans" />

            <ListView
                android:id="@+id/lstQuedadaR"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/Diez"
                android:layout_marginRight="@dimen/Diez"
                android:layout_weight="1"
                android:background="@drawable/borderlistview"
                android:divider="#DFDEDE"
                android:dividerHeight="2sp"
                android:footerDividersEnabled="true"
                android:headerDividersEnabled="true"
                android:scrollbarAlwaysDrawVerticalTrack="false"
                android:scrollbars="none" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/RelativeQuedadaS"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RelativeQuedadaR"
            android:orientation="vertical"
            android:weightSum="1.0" >

            <TextView
                android:id="@+id/txtQuedadaS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/Veinte"
                android:layout_marginTop="@dimen/Veinte"
                android:paddingLeft="@dimen/Diez"
                android:text="@string/QuedadaS"
                android:textColor="#990000"
                android:typeface="sans" />

            <ListView
                android:id="@+id/lstQuedadaS"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/Diez"
                android:layout_marginRight="@dimen/Diez"
                android:layout_weight="1"
                android:background="@drawable/borderlistview"
                android:divider="#DFDEDE"
                android:dividerHeight="2sp"
                android:footerDividersEnabled="true"
                android:headerDividersEnabled="true"
                android:scrollbarAlwaysDrawVerticalTrack="false"
                android:scrollbars="none" >
            </ListView>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>